# DiffCG

./: LICENSE  README.md  create_prior.py  install_deps.sh  numpy_bond_distribution.py  numpy_structure_replacement.py  pyproject.toml  test_learning.py  test_observable.py  test_reweighting.py  test_sample.py
diffcg/: __init__.py  energy.py  system.py
diffcg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diffcg/_core/: __init__.py  boltzmann.py  errors.py  geometry.py  logger.py  neighborlist.py  periodic.py  visualization.py
diffcg/cli/: create_prior.py
diffcg/common/: constants.py  error.py  geometry.py  neighborlist.py  periodic.py
diffcg/io/: ase_trj.py  convert.py  lammps.py  npz.py
diffcg/learning/: diffsim.py  ibi.py  multiobj.py  relative_entropy.py  reweighting.py
diffcg/md/: __init__.py  calculator.py  jaxmd_sampler.py  sample.py
diffcg/observable/: analyze.py  structure.py  thermo.py
diffcg/prior/: __init__.py  potentials.py  targets.py  training.py
diffcg/util/: boltzamnn_inversion.py  boltzmann_inversion.py  custom_interpolate.py  custom_quantity.py  logger.py  math.py  util.py
docs/: unit_audit_report.md  unit_consistency_report.md
example/: pretrained_params.npy  test_diffsim.py  test_diffsim_multiobj.py  test_ibi.py  test_relative_entropy.py
example/polystyrene/: common.py  run_diffsim.py  run_diffsim_multiobj.py  run_ibi.py  run_relative_entropy.py
example/polystyrene/data/T300/: PS.data  angleAAA.dist.tgt  bondAA_smooth.dist.tgt  dihedralAAAA.dist.tgt  nb_smoothed.dist.tgt
example/polystyrene/data/T400/: PS.data  angleAAA.dist.tgt  bondAA_smooth.dist.tgt  (+2 more)
tests/: test_units.py  test_units_standalone.py
(+13 files in other folders)
